Changes for 3.4.0alpha3

New features:
....I..... [ZBXNEXT-3725] updated templates for network devices to new version (internal version 0.10beta)

Bug fixes:
........S. [ZBX-12339] fixed item history and trends flags update during configuration cache synchornization (wiper)
..F....... [ZBXNEXT-18] fixed php5.4 incompatibility in events page and acknowledge operation form (gcalenko)
..F....... [ZBXNEXT-18] fixed script name select button for new acknowledge operation form and recovery operation form (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.0alpha2

New features:
..F....... [ZBXNEXT-2102] added blinking for recent problems in Problems widget (Sasha)
..F....... [ZBXNEXT-2102] implemented additional filters for dashboard widgets (Sasha)
A.F....... [ZBXNEXT-1076] implemented new permission schema to allow view map when no permissions to all map elements (miks)
A.F.....S. [ZBXNEXT-18] implemented sending alerts on acknowledges (Sergejs)
...G...... [ZBXNEXT-3910] added support to the agent for monitoring processes in trace or uninterruptible state on Linux, FreeBSD, OpenBSD and NetBSD (abs)
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F....... [ZBXNEXT-2102] fixed multiple issues in Map widget (miks)
..F....... [ZBXNEXT-2102] fixed Undefined constant: ALERT_MAX_RETRIES in Action log widget (Sasha)
A......... [ZBXNEXT-2102] added check for dashboard owners in user.delete() method (Sasha)
..F....... [ZBXNEXT-2102] fixed updating of dashboard with inaccessible elements (Sasha)
....I..... [ZBXNEXT-2102] fixed possible sql errors in upgrade patch (Sasha)
..F....... [ZBXNEXT-2102] fixed removing of favourites from dashboard widgets (vmurzins)
..F....... [ZBXNEXT-2031] fixed multiple bugs in maps (vjaceslavs)
A.F....... [ZBX-12384] fixed JMX endpoint related bugs in item mass update form and item.update API (vjaceslavs)