@@ -407,7 +407,8 @@ static void	add_sentusers_msg(ZBX_USER_MSG **user_msg, zbx_uint64_t actionid, co
 			" where actionid=" ZBX_FS_UI64
 				" and %s"
 				" and mediatypeid is not null"
-				" and alerttype=%d",
+				" and alerttype=%d"
+				" and acknowledgeid is null",
 				actionid, event_filter, ALERT_TYPE_MESSAGE);
 
 	while (NULL != (row = DBfetch(result)))
@@ -1759,7 +1760,8 @@ static int	check_escalation(const DB_ESCALATION *escalation, const DB_ACTION *ac
 
 	if (EVENT_SOURCE_TRIGGERS == action->eventsource &&
 			ACTION_MAINTENANCE_MODE_PAUSE == action->maintenance_mode &&
-			HOST_MAINTENANCE_STATUS_ON == maintenance)
+			HOST_MAINTENANCE_STATUS_ON == maintenance &&
+			escalation->acknowledgeid == 0)
 	{
 		/* remove paused escalations that were created and recovered */
 		/* during maintenance period                                 */
